changes on s3